# CrossPlatformAppDev

./: README.md
Lab1/: .gitignore
Lab1/root-finding/: CMakeLists.txt  Makefile
Lab1/root-finding/lib/: CMakeLists.txt  Makefile  root_finding.cpp  root_finding.h
lab2/: .gitignore
lab2/source/: CMakeLists.txt  PixWidget.cpp  PixWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab3/source/: CMakeLists.txt  XMLEditor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  xmlmodel.cpp  xmlmodel.h  xmlnode.cpp  xmlnode.h  xmlserialization.cpp  xmlserialization.h
lab4/: CMakeLists.txt  main-window.cpp  main-window.h  main-window.ui  main.cpp  worker-thread.cpp  worker-thread.h
lab6/APIRequests/: APIRequests.pro  CMakeLists.txt  committablemodel.cpp  committablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  requestfactory.cpp  requestfactory.h
lab7/QMLFileBrowser/: CMakeLists.txt  QMLFileBrowser.pro  filesystem.cpp  filesystem.h  main.cpp  main.qml
